# netrics-fast

./: README.md  pyproject.toml
.github/workflows/: CI.yml
netrics_fast/: __init__.py  dyadic_regression.py  print_coef.py
tests/: test_dyadic_regression.py
